package structural.bridge.interfaces;

public interface Implementor {
  void operation();
}
